Fix(styling): Set max width to wp imported images so we don't break the overflow

--- a/gatsby/src/assets/scss/_page.scss
+++ b/gatsby/src/assets/scss/_page.scss
@@ -42,3 +42,7 @@
     --flow-space: 2em;
   }
 }
+
+.wp-caption {
+  max-width: 100%;
+}
